# anti-sleep-turret-demo

./: .gitignore  NOTICE.md  PRIVACY.md  PUBLIC_RELEASE_MANIFEST.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ai-collaboration.md  architecture.md  bath-and-riz.md  current-implementation.md  development-history.md  entry-sheet-summary.md  evidence-and-limitations.md  iteration-history.md  problem-and-user.md  public-vs-private.md  state-transitions.md
docs/decisions/: 001-bathing-over-alarm-only.md  002-graded-intervention.md  003-explicit-exception-modes.md  004-repeated-risk-escalation.md  005-safety-before-enforcement.md
scripts/: verify_public_release.py
src/ast_demo/: __init__.py  bath_flow.py  cli.py  models.py  risk_engine.py  risk_episode_guard.py  riz_flow.py  scenarios.py  state_machine.py  ui.py
tests/: test_bath_and_riz.py  test_guard.py  test_modes_and_public.py  test_risk.py
