[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ast-demo"
version = "0.1.0"
description = "Sanitized public portfolio demo of Anti-Sleep Turret"
requires-python = ">=3.11"

[project.scripts]
ast-demo = "ast_demo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
